--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 		<imagetarget id='vw_beele_coster' src='targets/vw_beele_coster.jpeg'></imagetarget>
 		<imagetarget id='vw_blau_coster' src='targets/vw_blau_coster.jpeg'></imagetarget>
 		<imagetarget id='vw_super_beetle_upLook' src='targets/vw_super_beetle_upLook.jpeg'></imagetarget>
+		<imagetarget id='vw_super_beetle_upLook' src='targets/vw_super_beetle_upLook.jpeg'></imagetarget>
 
     <video id="webcam-video" muted autoplay playsinline style="width:1px;position:absolute"></video>
     <!-- <video id="webcam-video" muted autoplay playsinline style="width:100%; height:100%; object-fit:cover; position:absolute"></video> -->
