--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content='width=device-width, height=device-height, initial-scale=1.0, minimum-scale=1.0, user-scalable=no, shrink-to-fit=yes'>
-    <title>Unity WebGL Player | stickar</title>
+    <title>StickAR | Vintage car Series</title>
     <link rel="stylesheet" href="TemplateData/style.css">
     <style>
         html{
