--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         var startARDiv = document.querySelector("#startARDiv");
         startARDiv.style.opacity = 0;
         setTimeout(()=>{
-          startARDiv.style.display = "";
+          startARDiv.style.display = "none";
         }, 500);
         var buildUrl = "Build";
         var loaderUrl = buildUrl + "/stickar.loader.js";
